panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__relational-ops__test_signed_less_equal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/relational-ops/test_signed_less_equal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_signed_less_equal.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `int` @0) (42 `int` @0))
         (definition (b~3 `int` @4) (27 `int` @4))
         (return
            (add `int` @8
               (less-equal `int` @8
                  (b~3 `int` @4)
                  (a~2 `int` @0))
               (less-equal `int` @12
                  (b~3 `int` @4)
                  (27 `int` @16)))))))

----- stderr -----
