panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__relational-ops__test_unsigned_greater.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/relational-ops/test_unsigned_greater.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_unsigned_greater.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `unsigned int` @0) (noop-type-conversion `unsigned int` @0 (42 `int` @0)))
         (definition (b~3 `unsigned int` @4) (noop-type-conversion `unsigned int` @4 (27 `int` @4)))
         (return
            (add `int` @8
               (greater-equal `int` @8
                  (a~2 `unsigned int` @0)
                  (b~3 `unsigned int` @4))
               (greater-equal `int` @12
                  (a~2 `unsigned int` @0)
                  (a~2 `unsigned int` @0)))))))

----- stderr -----
